--- a/src/pages/order/Order.module.scss
+++ b/src/pages/order/Order.module.scss
@@ -59,6 +59,10 @@
                 &:not(:first-child) {
                     padding: 10px 16px;
                 }
+
+                span {
+                    font-weight: 600;
+                }
             }
 
             .nowrap {
