--- a/src/components/modals/Modal.module.scss
+++ b/src/components/modals/Modal.module.scss
@@ -4,19 +4,19 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 100;
     background: rgba(23, 73, 179, 0.1);
     backdrop-filter: blur(7.5px);
+    overflow: hidden;
 }
 
 .modal__content {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
