--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,8 +3,8 @@
 .header {
     position: fixed;
     top: 0px;
-    left: 0px;
-    width: 100%;
+    left: 75px;
+    width: calc(100% - 75px);
     background-color: constants.$background;
     z-index: 10;
     box-shadow: 0px 0px 20px -11px rgba(0, 0, 0, 0.75);
@@ -14,7 +14,7 @@
         align-items: center;
         justify-content: space-between;
         gap: 50px;
-        padding: 10px 20px 10px 120px;
+        padding: 10px 0px;
     }
 
     &__info {
