--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,20 +1,36 @@
+@use "../../styles/constants.scss";
+
 .navbar {
-    padding: 20px 0px;
-    background-color: rgb(223, 223, 223);
+    padding: 10px 0px;
+    background-color: constants.$light-grey;
     position: fixed;
     top: 0px;
     left: 0px;
     height: 100vh;
-    width: 100px;
+    width: 75px;
     z-index: 20;
 
     &__list {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 25px;
     }
 
-    &__logo {}
+    &__logo {
+        background-color: #cacaca;
+        padding: 10px;
+        border-radius: 12px;
+
+        p {
+            font-size: 28px;
+            font-weight: 700;
+            letter-spacing: .0005rem;
+
+            span {
+                color: constants.$warning;
+            }
+        }
+    }
 
     &__li {
         display: flex;
@@ -25,5 +41,25 @@
     &__link {
         color: inherit;
         text-decoration: none;
+        padding: 10px;
+        border-radius: 12px;
+        transition: all ease .25s;
+
+        &:hover {
+            background-color: #cacaca;
+        }
     }
+
+    &__icon {
+        width: 30px;
+        height: 30px;
+
+
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
 }
