--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,12 +18,10 @@ body,
     letter-spacing: .1em;
     color: constants.$black2;
     background-color: constants.$background;
-
-}
-
-#root {
     overflow-x: hidden;
 }
+
+#root {}
 
 .wrapper {
     min-height: 100%;
@@ -38,8 +36,7 @@ body,
 .main {
     flex: 1 1 auto;
     margin-top: 84px;
-    padding: 0px 0px 0px 100px;
-
+    padding: 0px 0px 0px 75px;
 }
 
 .footer {}
