--- a/src/pages/order/Order.module.scss
+++ b/src/pages/order/Order.module.scss
@@ -10,23 +10,32 @@
     }
 
     &__actions {
-        display: flex;
-        align-items: center;
 
-        .actions__search {
-            flex: 0 0 50%;
-            height: 45px;
+        .container {
+            max-width: 1240px;
+            margin: 0 auto;
         }
 
-        .actions__buttons {
-            flex: 1 1 50%;
+        .orderActions {
             display: flex;
             align-items: center;
-            justify-content: flex-end;
 
-            .button {
-                width: 120px;
-                height: 35px;
+            .actions__search {
+                flex: 0 0 50%;
+                height: 45px;
+            }
+
+            .actions__buttons {
+                flex: 1 1 50%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                gap: 15px;
+
+                .button {
+                    width: 120px;
+                    height: 45px;
+                }
             }
         }
     }
@@ -48,13 +57,12 @@
 
             &__row {
                 border-bottom: 1px solid constants.$grey;
-
             }
 
             &__item {
                 text-align: left;
                 line-height: 1.25;
-                padding: 10px 0px;
+                padding: 10px;
 
                 &:not(:first-child) {
                     padding: 10px 16px;
