navbar tranferred to header. added history-beta

--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -131,6 +131,14 @@
                     flex-direction: column;
 
                     p {}
+
+                    span {
+                        color: constants.$warning;
+                    }
+
+                    .error {
+                        font-size: 14px;
+                    }
                 }
             }
 
