--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,8 +3,7 @@
 .header {
     position: fixed;
     top: 0px;
-    left: 75px;
-    width: calc(100% - 75px);
+    width: 100%;
     background-color: constants.$background;
     z-index: 10;
     box-shadow: 0px 0px 20px -11px rgba(0, 0, 0, 0.75);
@@ -17,9 +16,65 @@
         padding: 10px 0px;
     }
 
-    &__info {
-        .header__title {}
+    .navigate {
+        display: flex;
+        gap: 25px;
+
+        li {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+
+        &__logo {
+            background-color: #cacaca;
+            padding: 8px;
+            border-radius: 12px;
+
+            p {
+                font-size: 24px;
+                font-weight: 700;
+                letter-spacing: .0005rem;
+
+                span {
+                    color: constants.$warning;
+                }
+            }
+        }
+
+        &__link {
+            color: inherit;
+            text-decoration: none;
+            padding: 8px;
+            border-radius: 12px;
+            transition: all ease .25s;
+
+            &_active {
+                color: inherit;
+                text-decoration: none;
+                padding: 8px;
+                border-radius: 12px;
+                transition: all ease .25s;
+                background-color: #cacaca;
+            }
+
+            &:hover {
+                background-color: #cacaca;
+            }
+        }
+
+        &__icon {
+            width: 25px;
+            height: 25px;
+
+            svg {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
+
 
     &__actions {
         display: flex;
