--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,7 +35,7 @@ body,
 .main {
     flex: 1 1 auto;
     margin-top: 84px;
-    padding: 0px 0px 0px 75px;
+    // padding: 0px 0px 0px 75px;
 }
 
 .footer {}
