--- a/src/components/modals/Modal.module.scss
+++ b/src/components/modals/Modal.module.scss
@@ -1,14 +1,11 @@
 // @use "../../styles/constants.scss";
 
 .modal__background {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     z-index: 100;
     background: rgba(23, 73, 179, 0.1);
     backdrop-filter: blur(7.5px);
@@ -16,7 +13,7 @@
 }
 
 .modal__content {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -25,4 +22,5 @@
     box-shadow: 0px 4px 24px rgba(213, 216, 221, 0.2);
     border-radius: 32px;
     z-index: 200;
+    overflow: hidden;
 }
