validation, ordertem status

--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -138,6 +138,7 @@
 
                     .error {
                         font-size: 14px;
+                        color: constants.$warning;
                     }
                 }
             }
