--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -87,6 +87,7 @@
             background-color: constants.$light-grey;
             padding: 5px 10px;
             border-radius: 15px;
+            cursor: pointer;
 
             img {
                 width: 30px;
