--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -129,11 +129,35 @@
                     display: flex;
                     gap: 8px;
                     flex-direction: column;
+                    position: relative;
 
                     p {}
 
                     span {
                         color: constants.$warning;
+                    }
+
+                    .search {
+                        position: absolute;
+                        top: 85px;
+                        left: 0px;
+                        z-index: 100;
+                        width: 100%;
+                        max-height: 250px;
+                        overflow: auto;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+                        background-color: constants.$white;
+                        padding: 15px;
+                        border-radius: 15px;
+                        box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
+
+                        &__item {
+                            border-bottom: 1px solid constants.$light-grey;
+                            padding: 5px;
+                            cursor: pointer;
+                        }
                     }
 
                     .error {
