--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -44,8 +44,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap');
 
-
+// Fonts
 $Manrope: "Manrope";
+
 // Colors
 $white: #FFF;
 $background: #f8f9fd;
