redirect from created order + dropdown inputs (test)

--- a/src/components/UI/select/Select.module.scss
+++ b/src/components/UI/select/Select.module.scss
@@ -3,7 +3,7 @@
     outline: 1px solid #F1F4F8;
     background: #F1F4F8;
     border-radius: 8px;
-    padding: 16px 24px;
+    padding: 16px;
     font-family: 'Gotham Pro';
     font-size: 17px;
     line-height: 130%;
