--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -23,8 +23,9 @@
             align-items: center;
             font-size: 21px;
 
-            p {
+            .title {
                 font-weight: 600;
+                font-size: 28px;
             }
         }
 
@@ -111,17 +112,15 @@
                 }
 
                 .techInfo {
+                    flex: 1 1 50%;
                     display: flex;
-                    flex-wrap: wrap;
-                    position: relative;
-                    padding-bottom: 1px;
-                    margin: 0px -25px -10px -25px;
+                    gap: 75px;
 
-                    .input__section {
-                        flex: 1 1 40%;
-                        padding: 0px 25px 10px 25px;
-
-                        p {}
+                    &__column {
+                        width: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
                     }
                 }
 
@@ -131,10 +130,13 @@
                     flex-direction: column;
                     position: relative;
 
-                    p {}
+                    .title {
+                        font-size: 17px;
+                        font-weight: 600;
+                    }
 
-                    span {
-                        color: constants.$warning;
+                    .input {
+                        height: 45px;
                     }
 
                     .search {
@@ -147,16 +149,37 @@
                         overflow: auto;
                         display: flex;
                         flex-direction: column;
-                        gap: 10px;
                         background-color: constants.$white;
                         padding: 15px;
                         border-radius: 15px;
                         box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
 
                         &__item {
+                            padding: 0px 5px;
                             border-bottom: 1px solid constants.$light-grey;
-                            padding: 5px;
+                            line-height: 2.2;
                             cursor: pointer;
+
+                            &:hover {
+                                color: constants.$blue ;
+                                background-color: constants.$light-grey;
+                            }
+                        }
+
+                        &_above {
+                            position: absolute;
+                            bottom: 55px;
+                            left: 0px;
+                            z-index: 100;
+                            width: 100%;
+                            max-height: 250px;
+                            overflow: auto;
+                            display: flex;
+                            flex-direction: column-reverse;
+                            background-color: constants.$white;
+                            padding: 15px;
+                            border-radius: 15px;
+                            box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
                         }
                     }
 
