--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -5,7 +5,6 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-
     }
 
     &__header {
@@ -47,6 +46,18 @@
             display: flex;
             align-items: center;
             gap: 15px;
+
+            .actions__pdf {
+                width: 30px;
+                height: 30px;
+                fill: constants.$grey;
+                cursor: pointer;
+                transition: ease .25s;
+
+                &:hover {
+                    fill: constants.$black2;
+                }
+            }
 
             .actions__payment {
                 width: 30px;
