--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -137,6 +137,7 @@
 
                     .input {
                         height: 45px;
+                        width: 100%;
                     }
 
                     .search {
