--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -133,8 +133,19 @@
         border-radius: 15px;
         box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
 
-        .title {
-            font-size: 21px;
+
+        .payment__row {
+            display: flex;
+            align-items: flex-end;
+            gap: 20px;
+
+            .title {
+                font-size: 21px;
+            }
+
+            .paymentType {
+                font-size: 18px;
+            }
         }
 
         .table {
@@ -293,7 +304,40 @@
                     }
 
                     .input__section {
+                        display: flex;
+
+                        flex-direction: column;
+                        position: relative;
+
                         .input {}
+
+                        .dropdown {
+                            position: absolute;
+                            top: 60px;
+                            left: 0px;
+                            z-index: 100;
+                            width: 100%;
+                            max-height: 250px;
+                            overflow: auto;
+                            display: flex;
+                            flex-direction: column;
+                            background-color: constants.$white;
+                            padding: 15px;
+                            border-radius: 15px;
+                            box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
+
+                            &__item {
+                                padding: 0px 5px;
+                                border-bottom: 1px solid constants.$light-grey;
+                                line-height: 2.2;
+                                cursor: pointer;
+
+                                &:hover {
+                                    color: constants.$blue ;
+                                    background-color: constants.$light-grey;
+                                }
+                            }
+                        }
 
                         .error {
                             font-size: 14px;
@@ -309,8 +353,6 @@
                     }
                 }
             }
-
-
         }
     }
 }
