--- a/src/pages/PDF/PDF.module.scss
+++ b/src/pages/PDF/PDF.module.scss
@@ -11,6 +11,38 @@
     src: url("https://kendo.cdn.telerik.com/2020.1.114/styles/fonts/DejaVu/DejaVuSans-Bold.ttf") format("truetype");
 }
 
+@page {
+    size: auto;
+    margin: 30px;
+}
+
+@media print {
+    .pdf {
+        padding: 0px;
+        border-radius: none;
+        box-shadow: none;
+    }
+
+    header {
+        display: none;
+    }
+
+    .button {
+        display: none;
+    }
+
+    .content_first,
+    .content_second {
+        background-color: white;
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        margin: 0;
+    }
+}
+
 .body {
     display: flex;
     flex-direction: column;
@@ -52,13 +84,13 @@
                 flex: 1 1 100%;
 
                 h1 {
-                    font-size: 17.5px;
+                    font-size: 27px;
                     font-weight: 700;
-                    letter-spacing: .05em;
+                    letter-spacing: .025em;
                 }
 
                 p {
-                    font-size: 15.5px;
+                    font-size: 21px;
 
                     span {
                         font-weight: 700;
@@ -68,7 +100,7 @@
 
             .serviceInfo {
                 text-align: center;
-                font-size: 10px;
+                font-size: 14px;
 
                 p {
                     letter-spacing: .002em;
@@ -80,8 +112,8 @@
             }
 
             .logo {
-                flex: 0 0 110px;
-                height: 55px;
+                flex: 0 0 140px;
+                height: 75px;
 
                 img {
                     width: 100%;
@@ -97,24 +129,20 @@
             width: 100%;
 
             &__row {
-
-                &:not(:last-child) {
-                    border-bottom: 1px solid black;
-                }
+                border: 1px solid black;
             }
 
             &__title {
-                border-right: 1px solid black;
+                border: 1px solid black;
                 padding: 5px;
                 font-weight: 700;
-                font-size: 11px;
+                font-size: 14px;
                 width: 120px;
             }
 
             &__text {
-
                 padding: 7px;
-                font-size: 10px;
+                font-size: 13px;
             }
         }
 
@@ -125,7 +153,7 @@
             margin-bottom: 40px;
 
             &__title {
-                font-size: 10px;
+                font-size: 16px;
                 font-weight: 700;
             }
 
@@ -135,18 +163,18 @@
                 gap: 3px;
                 line-height: 1.8;
                 list-style-type: decimal;
-                padding: 0px 12px;
+                padding: 0px 18px;
             }
 
             &__text {
-                font-size: 6px;
+                font-size: 10px;
             }
         }
 
         .signature {
             display: flex;
-
             justify-content: space-between;
+            position: relative;
 
             &__column {
                 display: flex;
@@ -154,34 +182,11 @@
                 gap: 10px;
                 position: relative;
                 padding-top: 10px;
-
-                &_left {
-                    &::before {
-                        content: "";
-                        position: absolute;
-                        top: 0px;
-                        left: 0px;
-                        width: 120%;
-                        height: 1px;
-                        background-color: black;
-                    }
-                }
-
-                &_right {
-                    &::before {
-                        content: "";
-                        position: absolute;
-                        top: 0px;
-                        right: 0px;
-                        width: 120%;
-                        height: 1px;
-                        background-color: black;
-                    }
-                }
+                border-top: 1px solid black;
             }
 
             &__text {
-                font-size: 10px;
+                font-size: 14px;
 
                 span {
                     font-weight: 700;
@@ -191,7 +196,6 @@
     }
 
     // second PDF
-
     .content_second {
         display: flex;
         flex-direction: column;
@@ -213,13 +217,13 @@
                 }
 
                 h1 {
-                    font-size: 24px;
+                    font-size: 32px;
                     font-weight: 700;
                     letter-spacing: .05em;
                 }
 
                 p {
-                    font-size: 15.5px;
+                    font-size: 18px;
 
                     span {
                         font-weight: 700;
@@ -229,7 +233,7 @@
 
             .serviceInfo {
                 text-align: center;
-                font-size: 10px;
+                font-size: 14px;
 
                 p {
                     letter-spacing: .002em;
@@ -241,8 +245,8 @@
             }
 
             .logo {
-                flex: 0 0 110px;
-                height: 55px;
+                flex: 0 0 140px;
+                height: 75px;
 
                 img {
                     width: 100%;
@@ -269,13 +273,13 @@
                 border-right: 1px solid black;
                 padding: 5px;
                 font-weight: 700;
-                font-size: 10px;
+                font-size: 14px;
                 flex: 0 0 120px;
             }
 
             &__text {
                 padding: 7px;
-                font-size: 9px;
+                font-size: 13px;
             }
 
             &__row_additional {
@@ -289,7 +293,7 @@
             &__title_additional {
                 padding: 5px;
                 font-weight: 700;
-                font-size: 10px;
+                font-size: 14px;
                 flex: 1 1 auto;
                 border-right: 1px solid black;
 
@@ -300,8 +304,8 @@
 
             &__text_additional {
                 padding: 7px;
-                font-size: 9px;
-                flex: 0 0 102px;
+                font-size: 13px;
+                flex: 0 0 135px;
                 text-align: right;
 
                 &:not(:last-child) {
@@ -316,11 +320,11 @@
             margin-top: -12px;
 
             &__title {
-                font-size: 10px;
+                font-size: 14px;
             }
 
             &__text {
-                font-size: 9px;
+                font-size: 12px;
             }
         }
 
@@ -335,7 +339,7 @@
                 top: -10px;
                 left: 50%;
                 transform: translateX(-50%);
-                font-size: 11px;
+                font-size: 14px;
                 font-weight: 700;
             }
 
@@ -351,36 +355,12 @@
                 display: flex;
                 flex-direction: column;
                 gap: 10px;
-                position: relative;
                 padding-top: 10px;
-
-                &_left {
-                    &::before {
-                        content: "";
-                        position: absolute;
-                        top: 0px;
-                        left: 0px;
-                        width: 120%;
-                        height: 1px;
-                        background-color: black;
-                    }
-                }
-
-                &_right {
-                    &::before {
-                        content: "";
-                        position: absolute;
-                        top: 0px;
-                        right: 0px;
-                        width: 120%;
-                        height: 1px;
-                        background-color: black;
-                    }
-                }
+                border-top: 1px solid black;
             }
 
             &__text {
-                font-size: 10px;
+                font-size: 12px;
 
                 span {
                     font-weight: 700;
