--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -82,6 +82,7 @@
 }
 
 .button {
+    padding: 5px;
     border-radius: 12px;
     display: flex;
     align-items: center;
@@ -94,10 +95,16 @@
 }
 
 .buttonText {
+
     font-weight: 700;
     font-size: 17px;
     line-height: 130%;
     transition: all .25s ease;
+
+    @media(max-width: 700px) {
+
+        font-size: 14px;
+    }
 }
 
 .active {
