--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -14,11 +14,19 @@
         justify-content: space-between;
         gap: 50px;
         padding: 10px 0px;
+
+        @media(max-width: 450px) {
+            gap: 30px;
+        }
     }
 
     .navigate {
         display: flex;
         gap: 25px;
+
+        @media(max-width: 450px) {
+            gap: 20px;
+        }
 
         li {
             display: flex;
@@ -32,10 +40,18 @@
             padding: 8px;
             border-radius: 12px;
 
+            @media(max-width: 450px) {
+                padding: 6px;
+            }
+
             p {
                 font-size: 24px;
                 font-weight: 700;
                 letter-spacing: .0005rem;
+
+                @media(max-width: 450px) {
+                    font-size: 21px;
+                }
 
                 span {
                     color: constants.$warning;
@@ -50,6 +66,10 @@
             border-radius: 12px;
             transition: all ease .25s;
 
+            @media(max-width: 450px) {
+                padding: 6px;
+            }
+
             &_active {
                 color: inherit;
                 text-decoration: none;
@@ -57,6 +77,10 @@
                 border-radius: 12px;
                 transition: all ease .25s;
                 background-color: #cacaca;
+
+                @media(max-width: 450px) {
+                    padding: 6px;
+                }
             }
 
             &:hover {
@@ -67,6 +91,11 @@
         &__icon {
             width: 25px;
             height: 25px;
+
+            @media(max-width: 450px) {
+                width: 20px;
+                height: 20px;
+            }
 
             svg {
                 width: 100%;
@@ -89,10 +118,19 @@
             border-radius: 15px;
             cursor: pointer;
 
+            @media(max-width: 450px) {
+                font-size: 14px;
+            }
+
             img {
                 width: 30px;
                 height: 30px;
                 object-fit: cover;
+
+                @media(max-width: 450px) {
+                    width: 25px;
+                    height: 25px;
+                }
             }
 
             p {}
