--- a/src/components/status-dropdown/StatusDropDown.module.scss
+++ b/src/components/status-dropdown/StatusDropDown.module.scss
@@ -42,6 +42,10 @@
     font-weight: 500;
     padding: 3px 10px;
 
+    @media(max-width: 700px) {
+        font-size: 14px;
+    }
+
     &:hover {
         cursor: pointer;
     }
