--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -7,6 +7,10 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+
+        @media(max-width: 700px) {
+            gap: 20px;
+        }
     }
 
     &__header {
@@ -26,6 +30,10 @@
             .title {
                 font-weight: 600;
                 font-size: 28px;
+
+                @media(max-width: 700px) {
+                    font-size: 21px;
+                }
             }
         }
 
@@ -77,9 +85,18 @@
             flex-direction: column;
             gap: 50px;
 
+            @media(max-width: 700px) {
+                gap: 20px;
+            }
+
             .row {
                 display: flex;
                 gap: 40px;
+
+                @media(max-width: 700px) {
+                    flex-direction: column;
+                    gap: 20px;
+                }
             }
 
             &__content {
@@ -115,6 +132,11 @@
                     flex: 1 1 50%;
                     display: flex;
                     gap: 75px;
+
+                    @media(max-width: 700px) {
+                        flex-direction: column;
+                        gap: 20px;
+                    }
 
                     &__column {
                         width: 100%;
