--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -15,26 +15,43 @@
         padding: 15px;
         border-radius: 15px;
         box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
+        gap: 15px;
+
+        @media(max-width:700px) {}
+
+        @media(max-width:600px) {}
 
         .header__info {
             display: flex;
-
             gap: 30px;
             font-size: 21px;
 
+            @media(max-width:700px) {
+                gap: 10px;
+                width: 100%;
+                font-size: 18px;
+            }
+
             .header__column {
+                white-space: nowrap;
+
                 .orderId {
                     font-weight: 700;
                 }
 
                 .orderDate {
                     font-size: 18px;
+
+                    @media(max-width:700px) {
+                        font-size: 16px;
+                    }
                 }
             }
 
             .orderPrice {
                 color: constants.$grey;
                 font-weight: 600;
+                white-space: nowrap;
             }
 
             .statusDropDown {
@@ -47,12 +64,33 @@
             align-items: center;
             gap: 15px;
 
+            @media(max-width:700px) {}
+
+            @media(max-width:600px) {
+                flex-direction: column;
+            }
+
+            .actions__row {
+                display: flex;
+                align-items: center;
+                gap: 15px;
+
+                @media(max-width:600px) {
+                    gap: 12px;
+                }
+            }
+
             .actions__pdf {
                 width: 30px;
                 height: 30px;
                 fill: constants.$grey;
                 cursor: pointer;
                 transition: ease .25s;
+
+                @media(max-width:700px) {
+                    width: 25px;
+                    height: 25px;
+                }
 
                 &:hover {
                     fill: constants.$black2;
@@ -66,6 +104,11 @@
                 cursor: pointer;
                 transition: ease .25s;
 
+                @media(max-width:700px) {
+                    width: 25px;
+                    height: 25px;
+                }
+
                 &:hover {
                     fill: green;
                 }
@@ -78,6 +121,11 @@
                 cursor: pointer;
                 transition: ease .25s;
 
+                @media(max-width:700px) {
+                    width: 20px;
+                    height: 20px;
+                }
+
                 &:hover {
                     fill: constants.$black2;
                 }
@@ -88,6 +136,11 @@
                 height: 31px;
                 position: relative;
                 cursor: pointer;
+
+                @media(max-width:700px) {
+                    width: 25px;
+                    height: 25px;
+                }
 
                 &:hover {
 
@@ -107,6 +160,10 @@
                     background-color: constants.$grey;
                     transform: rotate(-45deg);
                     transition: ease .25s;
+
+                    @media(max-width:700px) {
+                        top: 12px;
+                    }
                 }
 
                 &::after {
@@ -119,6 +176,10 @@
                     background-color: constants.$grey;
                     transform: rotate(45deg);
                     transition: ease .25s;
+
+                    @media(max-width:700px) {
+                        top: 12px;
+                    }
                 }
             }
         }
@@ -132,7 +193,7 @@
         padding: 15px;
         border-radius: 15px;
         box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
-
+        display: none;
 
         .payment__row {
             display: flex;
@@ -184,6 +245,7 @@
         flex: 1 1 auto;
         display: flex;
         gap: 20px;
+        display: none;
     }
 
     &__history {
