--- a/src/components/modals/payment-modal/PaymentModal.module.scss
+++ b/src/components/modals/payment-modal/PaymentModal.module.scss
@@ -6,7 +6,13 @@
         flex-direction: column;
         gap: 15px;
 
-        .title {}
+        .title {
+
+            .date {
+                font-size: 18px;
+                margin-left: 15px;
+            }
+        }
 
         .form {
             display: flex;
