--- a/src/pages/createOrder/CreateOrder.module.scss
+++ b/src/pages/createOrder/CreateOrder.module.scss
@@ -203,6 +203,10 @@
                             padding: 15px;
                             border-radius: 15px;
                             box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
+
+                            @media(max-width:700px) {
+                                bottom: -220px
+                            }
                         }
                     }
 
