--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -310,8 +310,6 @@
             display: none;
         }
 
-
-
         .history__title {}
 
         .history__input {
@@ -410,7 +408,15 @@
                 align-items: center;
             }
 
-            .order__title {}
+            @media(max-width: 420px) {
+                gap: 10px;
+            }
+
+            .order__title {
+                @media(max-width: 420px) {
+                    font-size: 21px;
+                }
+            }
 
             .orderInfo__content {
 
@@ -418,6 +424,7 @@
                     padding: 16px;
                     display: flex;
                     align-items: center;
+
                     border-bottom: 1px solid constants.$grey;
                     width: 350px;
 
@@ -431,6 +438,11 @@
                         width: 350px;
                     }
 
+                    @media(max-width: 420px) {
+                        padding: 10px;
+                        width: auto;
+                    }
+
                     .orderInfo__title {
                         color: constants.$grey;
                         flex: 0 0 50%;
@@ -442,6 +454,10 @@
 
                         @media(max-width: 950px) {
                             flex: 0 0 50%;
+                        }
+
+                        @media(max-width: 420px) {
+                            font-size: 14px;
                         }
                     }
 
@@ -491,6 +507,10 @@
                         display: flex;
                         justify-content: center;
                         text-align: center;
+
+                        @media(max-width: 420px) {
+                            font-size: 14px;
+                        }
                     }
                 }
             }
