--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -366,9 +366,18 @@
         border-radius: 15px;
         box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
 
+        @media(max-width: 610px) {
+            flex-direction: column;
+            gap: 10px;
+        }
+
         .title {
             font-size: 28px;
             flex: 1 1 100%;
+
+            @media(max-width: 950px) {
+                font-size: 21px;
+            }
         }
 
         .buttons {
@@ -377,6 +386,11 @@
             align-items: center;
             justify-content: flex-end;
             gap: 50px;
+
+            @media(max-width: 610px) {
+                justify-content: center;
+                flex: 1 1 100%;
+            }
         }
 
         .button {
