--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -289,6 +289,10 @@
         flex: 1 1 auto;
         display: flex;
         gap: 20px;
+
+        @media(max-width: 950px) {
+            flex-direction: column-reverse;
+        }
     }
 
     &__history {
@@ -307,7 +311,7 @@
         }
 
         @media(max-width: 950px) {
-            display: none;
+            // display: none;
         }
 
         .history__title {}
@@ -409,7 +413,7 @@
         box-shadow: 0px 0px 33px -11px rgba(0, 0, 0, 0.75);
         height: 100%;
 
-        @media(max-width: 800px) {
+        @media(max-width: 700px) {
             flex-direction: column;
         }
 
@@ -428,7 +432,7 @@
 
             .order__title {
                 @media(max-width: 420px) {
-                    font-size: 21px;
+                    font-size: 18px;
                 }
             }
 
@@ -447,11 +451,6 @@
                         width: 300px;
                     }
 
-                    @media(max-width: 950px) {
-                        padding: 16px;
-                        width: 350px;
-                    }
-
                     @media(max-width: 420px) {
                         padding: 10px;
                         width: 280px;
@@ -462,17 +461,12 @@
                         flex: 0 0 50%;
                         font-size: 16px;
 
-                        @media(max-width: 1150px) {
-                            flex: 0 0 40%;
-                        }
-
                         @media(max-width: 950px) {
                             flex: 0 0 50%;
                         }
 
                         @media(max-width: 420px) {
                             font-size: 14px;
-
                         }
                     }
 
@@ -481,7 +475,11 @@
                         flex-direction: column;
                         position: relative;
 
-                        .input {}
+                        .input * {
+                            @media(max-width: 420px) {
+                                font-size: 14px;
+                            }
+                        }
 
                         .dropdown {
                             position: absolute;
