--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -310,11 +310,13 @@
             flex: 0 0 25%;
         }
 
-        @media(max-width: 950px) {
-            // display: none;
-        }
 
-        .history__title {}
+
+        .history__title {
+            @media(max-width: 420px) {
+                font-size: 18px;
+            }
+        }
 
         .history__input {
             display: flex;
@@ -346,9 +348,17 @@
                     align-items: center;
                     gap: 10px;
 
-                    .date {}
+                    .date {
+                        @media(max-width: 420px) {
+                            font-size: 12px;
+                        }
+                    }
 
-                    .author {}
+                    .author {
+                        @media(max-width: 420px) {
+                            font-size: 12px;
+                        }
+                    }
                 }
             }
         }
