--- a/src/components/modals/auth-modal/AuthModal.module.scss
+++ b/src/components/modals/auth-modal/AuthModal.module.scss
@@ -1,8 +1,6 @@
 @use "../../../styles/constants.scss";
 
-.modal {
-    width: 350px;
-}
+.modal {}
 
 .form {
     display: flex;
@@ -13,6 +11,7 @@
 .title {
     font-size: 24px;
     text-align: center;
+    white-space: nowrap;
 }
 
 .buttons {
