--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -86,6 +86,18 @@
                 align-items: flex-end;
             }
 
+            .actions__copy {
+                width: 30px;
+                height: 30px;
+                fill: constants.$grey;
+                cursor: pointer;
+                transition: ease .25s;
+
+                &:hover {
+                    fill: constants.$black2;
+                }
+            }
+
             .actions__pdf {
                 width: 30px;
                 height: 30px;
