--- a/src/pages/orderItem/OrderItem.module.scss
+++ b/src/pages/orderItem/OrderItem.module.scss
@@ -26,7 +26,7 @@
             gap: 30px;
             font-size: 21px;
 
-            @media(max-width:720px) {
+            @media(max-width:800px) {
                 flex-direction: column;
                 gap: 10px;
                 font-size: 18px;
@@ -41,6 +41,10 @@
 
                     .orderId {
                         font-weight: 700;
+
+                        @media(max-width:380px) {
+                            font-size: 16px;
+                        }
                     }
 
                     .orderDate {
@@ -49,6 +53,11 @@
                         @media(max-width:720px) {
                             font-size: 16px;
                         }
+
+                        @media(max-width:380px) {
+                            font-size: 14px;
+                        }
+
                     }
                 }
 
@@ -56,13 +65,17 @@
                     color: constants.$grey;
                     font-weight: 600;
                     white-space: nowrap;
+
+                    @media(max-width:380px) {
+                        font-size: 14px;
+                    }
                 }
             }
 
             .statusDropDown {
                 white-space: nowrap;
 
-                @media(max-width: 870px) {
+                @media(max-width: 920px) {
                     white-space: normal;
                 }
 
@@ -79,7 +92,7 @@
             gap: 15px;
             flex: 1 1 100%;
 
-            @media(max-width:500px) {
+            @media(max-width:540px) {
                 gap: 10px;
                 flex-direction: column-reverse;
 
@@ -92,6 +105,11 @@
                 fill: constants.$grey;
                 cursor: pointer;
                 transition: ease .25s;
+
+                @media(max-width:700px) {
+                    width: 25px;
+                    height: 25px;
+                }
 
                 &:hover {
                     fill: constants.$black2;
